# wagtail-starter-kit

./: .env.example.mysql  .gitignore  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.mysql.override.yaml  compose.override.yaml  compose.postgresql.override.yaml  compose.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: urls.py
app/base/: apps.py  blocks.py  models.py
app/base/migrations/: 0001_create_footer.py  0001_initial.py  0002_add_form_page.py  0002_footertext.py  0003_formpage_formfield.py
app/base/templatetags/: navigation_tags.py
app/blog/: models.py  wagtail_hooks.py
app/blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogpagegalleryimage.py  0004_author.py  0005_blogpage_authors.py  0006_blogpagetag_blogpage_tags.py  0007_blogtagindexpage.py
app/blog/templatetags/: blog_tags.py
app/forms/: apps.py  models.py
app/forms/migrations/: 0001_initial.py
app/home/: models.py  views.py  wagtail_hooks.py
app/home/migrations/: 0003_homepage_body.py  0004_customise_home_page.py  0004_homepage_hero_cta_homepage_hero_cta_link_and_more.py
app/portfolio/: apps.py  blocks.py  models.py
app/settings/: base.py  dev.py
app/static_src/js/: app.js
app/style_guide/: models.py
app/templates/: base.html
model_inspector/: apps.py  helpers.py  settings.py  urls.py  views.py  wagtail_hooks.py
model_inspector/api/: conf.py  dataclasses.py  serializers.py  urls.py  views.py
scripts/: server.js
static_src/js/: app.js
static_src/scss/: app.scss  vars.scss
(+49 files in other folders)
